# esp32_sys_i2c_tasksafe_unlimited

./: CMakeLists.txt  LICENSE  LICENSE.spdx  README.md  sdkconfig
components/include/: sys_i2c.h  sys_trace_macros.h
components/sys_i2c/: CMakeLists.txt  Kconfig  sys_i2c.c
docs/: esp32cmd.sh
main/: CMakeLists.txt  app_config.c  app_config.h  app_main.c  bsp_config.c
